2005-09-06  Derek Price  <derek@ximbiot.com>

	Update from GNULIB with alpha-quality patch.
	* canon-host.m4, gnulib-comp.m4: Updated.
	* getaddrinfo.m4, sockpfaf.m4: New files.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* mbchar.m4 (gl_MBCHAR): Only enable when wchar.h is found.
	(Patch from Yoann Vandoorselaere <yoann.v@prelude-ids.com>.)

2005-09-04  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* glob.m4, gnulib-cache.m4, gnulib-comp.m4: Updated.

	Add canon-host module from GNULIB.
	* canon-host.m4: New file.
	* gnulib-cache.m4, gnulib-comp.m4: Updated.
	* gnulib.m4: Removed.

	Update from GNULIB.
	* getopt.m4, getpass.m4, lib-link.m4, lib-prefix.m4, minmax.m4,
	regex.m4, strcase.m4, strstr.m4, unistd-safer.m4, xgetcwd.m4:
	Updated.
	* gnulib-cache.m4, gnulib-comp.m4, gnulib-tool.m4, mbchar.m4,
	mbiter.m4, memchr.m4: New files.

2005-09-03  Larry Jones  <lawrence.jones.ugs.com>

	* getlogin_r.m4: Fix cut & paste error.

2005-08-12  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* bison.m4, dup2.m4, getcwd-path-max.m4, getcwd.m4, getline.m4,
	getopt.m4, gnulib.m4, mbrtowc.m4, mkstemp.m4, onceonly_2_57.m4,
	pagealign_alloc.m4, regex.m4, save-cwd.m4, size_max.m4, strftime.m4,
	unistd-safer.m4: Updated from GNULIB.
	* getdelim.m4: New file.

2005-07-15  Derek Price  <derek@ximbiot.com>

	* glob.m4: Import new version from GNULIB.

2005-06-15  Derek Price  <derek@ximbiot.com>

	* bison.m4 (gl_BISON): Use new build-aux/bison-missing script.

2005-06-10  Derek Price  <derek@ximbiot.com>

	Sync with GNULIB.
	* getcwd-path-max.m4, rename.m4: Update from GNULIB.
	* path-concat.m4: Rename to...
	* filenamecat: ...this.

	Test new stat module.
	* stat.m4: Remove this file.
	* lstat.m4: Don't check for empty string bug.

2005-05-28  Derek Price  <derek@ximbiot.com>

	* glob.m4: s/MISSING_SYS_CDEFS_H/_SYS_CDEFS_H/.  Add comment.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* glob.m4: Don't cater to Solaris here...