@@ -1,3 +1,7 @@
+2005-09-09  Derek Price  <derek@ximbiot.com>
+
+	* glob.m4: Update from GNULIB with alpha-quality glibc porting changes.
+
 2005-09-06  Derek Price  <derek@ximbiot.com>
 
 	Update from GNULIB with alpha-quality patch.
